# zephyr

boards/nxp/frdm_k66f/: Kconfig.defconfig  Kconfig.frdm_k66f  board.cmake  board.yml  frdm_k66f-pinctrl.dtsi  frdm_k66f.dts  frdm_k66f.yaml  frdm_k66f_defconfig
samples/basic/mutithread_blinky/: CMakeLists.txt  prj.conf  zephyr-macos.code-workspace
samples/basic/mutithread_blinky/UML/: ClassDiagram_App.puml  HardwareDescription.puml  SequenceDiagram_ButtonInput.puml  SequenceDiagram_GestureDetection.puml  SequenceDiagram_LCDUpdate.puml  SequenceDiagram_LEDControl.puml  SequenceDiagram_MainFunction.puml  SequenceDiagram_SensorSampling.puml  SequenceDiagram_Snake.puml  SequenceDiagram_TerminalLogging.puml
samples/basic/mutithread_blinky/boards/: frdm_k66f.overlay
samples/basic/mutithread_blinky/dts/bindings/: nokia,lcd-5110.yaml
samples/basic/mutithread_blinky/src/: button.c  button.h  gesture_detection.c  gesture_detection.h  lcd_display.c  lcd_display.h  led_control.c  led_control.h  main.c  sensor_sampling.c  sensor_sampling.h  shared_data.c  shared_data.h  snake_game.c  snake_game.h  terminal_logging.c  terminal_logging.h  utils.c  utils.h
samples/basic/mutithread_blinky/src/LCD5110/: LCD_nokia.c  LCD_nokia.h  LCD_nokia_images.c  LCD_nokia_images.h
